# clp-plugin-presto-connector

./: .dockerignore  .gitignore  .gitmodules  README.md  taskfile.yaml
.github/: CODEOWNERS
.github/docker/: presto-image.Dockerfile
.github/workflows/: build-dependency-image.yaml  build-packages.yaml  validate-deps.yaml
presto-connector/: .eclipse-formatter.xml  .gitignore  README.md  lint-tasks.yaml  mvnw  pom.xml  spotbugs-exclude.xml  taskfile.yaml
presto-connector/src/main/java/com/facebook/presto/plugin/clp/: ClpColumnHandle.java  ClpConfig.java  ClpConnector.java  ClpConnectorFactory.java  ClpErrorCode.java  ClpExpression.java  ClpFunctions.java  ClpHandleResolver.java  ClpMetadata.java  ClpModule.java  ClpPlugin.java  ClpRecordSetProvider.java  ClpSplit.java  ClpSplitManager.java  ClpTableHandle.java  ClpTableLayoutHandle.java  ClpTransactionHandle.java
presto-connector/src/main/java/com/facebook/presto/plugin/clp/codec/: ClpColumnHandleCodec.java  ClpConnectorCodecProvider.java  ClpSplitCodec.java  ClpTableHandleCodec.java  ClpTableLayoutHandleCodec.java  ClpTransactionHandleCodec.java  CodecUtils.java
presto-connector/src/main/java/com/facebook/presto/plugin/clp/metadata/: ClpMetadataProvider.java  ClpMySqlMetadataProvider.java  ClpSchemaTree.java  ClpSchemaTreeNodeType.java
presto-connector/src/main/java/com/facebook/presto/plugin/clp/optimization/: ClpComputePushDown.java  ClpFilterToKqlConverter.java  ClpPlanOptimizerProvider.java  ClpUdfRewriter.java
presto-connector/src/main/java/com/facebook/presto/plugin/clp/split/: ClpMySqlSplitProvider.java  ClpSplitProvider.java
presto-connector/src/main/java/com/facebook/presto/plugin/clp/split/filter/: ClpMySqlSplitFilterProvider.java  ClpSplitFilterConfig.java  ClpSplitFilterConfigCustomOptionsDeserializer.java  ClpSplitFilterProvider.java
presto-connector/src/test/java/com/facebook/presto/plugin/clp/: ClpMetadataDbSetUp.java  ClpQueryRunner.java  TestClpFilterToKql.java  TestClpMetadata.java  TestClpQueryBase.java  TestClpSplit.java  TestClpUdfRewriter.java
presto-connector/src/test/java/com/facebook/presto/plugin/clp/codec/: TestClpConnectorCodecProvider.java
presto-connector/src/test/java/com/facebook/presto/plugin/clp/mockdb/: ClpMockMetadataDatabase.java
presto-connector/src/test/java/com/facebook/presto/plugin/clp/mockdb/table/: ArchivesTableRows.java  ColumnMetadataTableRows.java  DatasetsTableRows.java
presto-connector/src/test/java/com/facebook/presto/plugin/clp/split/filter/: TestClpMySqlSplitFilterConfig.java  TestClpSplitFilterConfigCommon.java
presto-connector/taskfiles/: lint.yaml
taskfiles/: lint.yaml
taskfiles/presto-connector/: lint.yaml  main.yaml
taskfiles/velox-connector/: deps.yaml  main.yaml
tools/: README.md
tools/build-packages/: README.md  build-dependency-image.sh  build-installer-init-image.sh  build-packages.sh  build.sh  package.sh
tools/build-packages/dependency-image/: .gitignore  Dockerfile  lib.sh  use-host-ca.sh  utils.sh
tools/build-packages/dependency-image/ca-bundle/: ca-bundle.sh
tools/build-packages/fetch-presto/: CMakeLists.txt
tools/build-packages/image/: Dockerfile  entrypoint.sh
tools/build-packages/internal/build-cache/: README.md  container.sh  host.sh
tools/build-packages/internal/ca-trust/: README.md  container.sh  host.sh
tools/build-packages/internal/ca-trust/generators/java-pkcs12/: CreateJavaTrustStore.java  README.md  generate.sh
tools/build-packages/internal/container/: build-artifacts.sh
tools/build-packages/internal/host/: build-env.sh
tools/build-packages/package-specs/deb/: clp-plugin-presto-connector.control.in
tools/build-packages/package-specs/rpm/: clp-plugin-presto-connector.spec
tools/ca-bundle/: ca-bundle.sh  install-ca-bundle.sh  stage-ca-bundle.sh
tools/presto-deps/: install-presto-artifacts.sh  validate-presto-dep-sync.py
velox-connector/: .gitignore  CMakeLists.txt  README.md  plugin.map  taskfile.yaml
velox-connector/cmake/: PrestoPin.cmake
velox-connector/src/: CMakeLists.txt  ClpPluginEntry.cpp  ClpPrestoToVeloxConnector.cpp  ClpPrestoToVeloxConnector.h
velox-connector/src/connector/: CMakeLists.txt  ClpColumnHandle.h  ClpConfig.cpp  ClpConfig.h  ClpConnector.cpp  ClpConnector.h  ClpConnectorSplit.h  ClpDataSource.cpp  ClpDataSource.h  ClpTableHandle.cpp  ClpTableHandle.h
velox-connector/src/connector/search_lib/: BaseClpCursor.cpp  BaseClpCursor.h  CMakeLists.txt  ClpPackageS3AuthProvider.cpp  ClpPackageS3AuthProvider.h  ClpS3AuthProviderBase.cpp  ClpS3AuthProviderBase.h  ClpTimestampsUtils.h
velox-connector/src/connector/search_lib/archive/: CMakeLists.txt  ClpArchiveCursor.cpp  ClpArchiveCursor.h  ClpArchiveJsonStringVectorLoader.cpp  ClpArchiveJsonStringVectorLoader.h  ClpArchiveVectorLoader.cpp  ClpArchiveVectorLoader.h  ClpQueryRunner.cpp
velox-connector/src/connector/search_lib/ir/: CMakeLists.txt  ClpIrCursor.cpp  ClpIrCursor.h  ClpIrJsonStringVectorLoader.cpp  ClpIrJsonStringVectorLoader.h  ClpIrUnitHandler.h  ClpIrVectorLoader.cpp  ClpIrVectorLoader.h
velox-connector/src/connector/tests/: ClpConfigTest.cpp  ClpConnectorTest.cpp
velox-connector/src/connector/tests/examples/: test_1_ir.clp.zst  test_2_ir.clp.zst  test_4.ndjson  test_4_ir.clp.zst  test_5.clps  test_5.ndjson  test_5.v0.5.0.clps
velox-connector/src/protocol/: CMakeLists.txt  ClpConnectorProtocol.cpp  ClpConnectorProtocol.h  PrestoProtocolClp.h
velox-connector/taskfiles/: deps.yaml  velox-connector.yaml
