# NOTE: 3.28.3 is the highest CMake version required by this plugin's dependencies.
cmake_minimum_required(VERSION 3.28.3)

project(libclp-plugin-velox-connector LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Enable -fPIC for all targets so STATIC libraries can be linked into a shared library.
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# Match the Presto worker's AVX2 flags to satisfy Folly's F14LinkCheck<Mode> symbol.
#
# NOTE: Including Folly's F14 headers emits a call to F14LinkCheck<Mode>, where Mode is determined
# at compile time by the CPU flags. This plugin includes the Presto worker's headers, which pull in
# Folly's F14 headers transitively. The Presto worker is built with AVX2 (Mode 2); if this plugin is
# built without it, it emits a call to F14LinkCheck<1>, which the Presto worker does not provide,
# causing dlopen to fail with an unresolved symbol error.
#
# AVX2 is x86-64 only. On arm64, Folly's F14 picks an ARM-appropriate mode whose F14LinkCheck<Mode>
# the arm64-built worker exports, so no extra flag is needed.
if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64|amd64")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64")
    # TODO(arm64): the F14LinkCheck<Mode> match between plugin and upstream
    # prestodb/presto's arm64 worker is asserted by the comment above but
    # UNVERIFIED end-to-end — the published presto-native arm64 image
    # SIGILLs on Apple Silicon for an unrelated reason (suspected SVE
    # instruction), blocking dlopen testing. Re-test once that image is
    # fixed. If dlopen fails with `undefined symbol: folly::...F14LinkCheck<N>`,
    # the worker is compiled with a Folly mode this plugin doesn't match —
    # pin the worker's -march here to align them.
    message(STATUS
        "arm64: Folly F14LinkCheck mode-matching with the Presto worker is "
        "unverified (no working arm64 worker image yet); see CMakeLists.txt TODO."
    )
endif()

# ==============================================================================
# Dependencies
# ==============================================================================

# Use the Taskfile-installed dependencies (task deps:plugin).
#
# NOTE: all-deps.cmake is auto-generated by the Taskfile and sets <Package>_ROOT cache variables
# (e.g. fmt_ROOT, absl_ROOT) that point to pre-installed deps under build/deps/cpp/<pkg>-install/.
# CMake's find_package() searches <Package>_ROOT first; these variables ensure that all
# find_package() calls resolve to the Taskfile-installed versions rather than any system copies.
if(NOT DEFINED DEPS_CPP_DIR)
    set(DEPS_CPP_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/deps/cpp")
endif()

include("${DEPS_CPP_DIR}/cmake-settings/all-deps.cmake" REQUIRED)

# ==============================================================================
# Presto/Velox framework headers
# ==============================================================================
include(FetchContent)

include("${CMAKE_CURRENT_LIST_DIR}/cmake/PrestoPin.cmake")
message(STATUS "Downloading presto for headers (commit: ${PRESTO_NATIVE_EXECUTION_SHA})")
FetchContent_Declare(
    presto_native_execution
    GIT_REPOSITORY    https://github.com/prestodb/presto.git
    GIT_TAG           "${PRESTO_NATIVE_EXECUTION_SHA}"
    GIT_SUBMODULES    "presto-native-execution/velox"
    GIT_SUBMODULES_RECURSE OFF
)
FetchContent_MakeAvailable(presto_native_execution)
set(PRESTO_ROOT ${presto_native_execution_SOURCE_DIR}/presto-native-execution)

# ==============================================================================
# CLP
# ==============================================================================

# CLP options - only build what the plugin needs.
set(CLP_BUILD_CLP_REGEX_UTILS OFF CACHE BOOL "Build CLP regex utils")
set(CLP_BUILD_CLP_S_JSONCONSTRUCTOR OFF CACHE BOOL "Build CLP-S JSON constructor")
set(CLP_BUILD_CLP_S_REDUCER_DEPENDENCIES OFF CACHE BOOL "Build CLP-S reducer dependencies")
set(CLP_BUILD_CLP_S_SEARCH_SQL OFF CACHE BOOL "Build CLP-S search SQL")
set(CLP_BUILD_EXECUTABLES OFF CACHE BOOL "Build CLP executables")
set(CLP_BUILD_TESTING OFF CACHE BOOL "Build CLP tests")

message(STATUS "Downloading CLP (commit: a91e5f71f0715d7d6b3ea7c177e1b39b3e6a24a6)")
FetchContent_Declare(clp
  GIT_REPOSITORY https://github.com/y-scope/clp.git
  GIT_TAG        a91e5f71f0715d7d6b3ea7c177e1b39b3e6a24a6
  SOURCE_SUBDIR components/core
)
FetchContent_MakeAvailable(clp)

# Workaround for GCC 12.2 LTO partitioning ICE (GCC bug PR104049, fixed in 12.3).
#
# NOTE: CLP's CMakeLists unconditionally enables CMAKE_INTERPROCEDURAL_OPTIMIZATION in
# Release builds, producing LTO-only archives (no fat fallback). When this plugin links
# them, GCC auto-invokes lto1 which then crashes in add_symbol_to_partition_1 at
# lto-partition.cc:152. Forcing IPO off on every CLP target makes them link as plain
# native objects.
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU"
   AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "12.3")
    function(_disable_ipo_recursive dir)
        get_directory_property(targets DIRECTORY "${dir}" BUILDSYSTEM_TARGETS)
        foreach(t IN LISTS targets)
            set_property(TARGET ${t} PROPERTY INTERPROCEDURAL_OPTIMIZATION OFF)
        endforeach()
        get_directory_property(subdirs DIRECTORY "${dir}" SUBDIRECTORIES)
        foreach(sub IN LISTS subdirs)
            _disable_ipo_recursive("${sub}")
        endforeach()
    endfunction()
    _disable_ipo_recursive("${clp_SOURCE_DIR}/components/core")
endif()

# ==============================================================================
# Plugin target
# ==============================================================================

# Plugin source tree
add_subdirectory(src)

# Plugin target
add_library(clp-plugin-velox-connector SHARED
        src/ClpPluginEntry.cpp
        src/ClpPrestoToVeloxConnector.cpp
)

target_include_directories(clp-plugin-velox-connector
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        ${PRESTO_ROOT}
        ${PRESTO_ROOT}/velox
)

target_link_libraries(clp-plugin-velox-connector
        PRIVATE
        presto_clp_protocol
        presto_clp_connector
)

# Hide all symbols by default to prevent ODR clashes with the Presto worker.
#
# NOTE: The plugin and the Presto worker share overlapping dependencies (e.g., fmt) that may differ
# in version. Without visibility control, the dynamic linker could resolve the plugin's calls to
# the Presto worker's copy of those libraries at dlopen time, causing undefined behavior. The
# following ensure the plugin uses its own copies of each dependency:
#
# - Static linking embeds dependency code into the .so (resolved at link time)
# - CXX_VISIBILITY_PRESET hidden hides those symbols from the dynamic table
# - VISIBILITY_INLINES_HIDDEN hides inline function symbols too
set_target_properties(clp-plugin-velox-connector
        PROPERTIES
        CXX_VISIBILITY_PRESET hidden
        VISIBILITY_INLINES_HIDDEN ON
)

target_link_options(clp-plugin-velox-connector
        PRIVATE
        -Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/plugin.map
)
